[package]
name = "quick-sort"
version = "0.1.1"
authors = ["hzqd <hzqelf@yeah.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
rayon = "1.5.0"
bencher = "0.1.5"
lazy_static = "1.4.0"
my_ext = { path = "./my_ext" }

[[bench]]
name = "clone"
harness = false
